update configs